--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+  <div class="container">
+
+  </div>
   <nav class=" navbar_1 navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="/"><i class="fas fa-hands-helping"></i> <b>lifeline</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
