--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,6 +6,9 @@
     <li><a href="https://github.com/eshikakothari"><i class="fab fa-github fa-lg"></i></a></li>
   </ul>
 </footer>
+</div>
+
 </body>
+
 
 </html>
