--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,5 +1,5 @@
 <%-include("partials/header")-%>
-<div class="container jumbotron">
+<div class=" jumbotron">
   <div class="row">
     <p class="h2">Transaction Succcess</p>
   </div>
