--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 body{
+  background-color: #a3f7bf;
   background-image: -webkit-linear-gradient(65deg,#a3f7bf 50%, #29a19c 50%);
   background-repeat: no-repeat;
   min-height: 1000px;
