--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,6 +1,6 @@
 <%-include("partials/header")-%>
 <h3>Transaction Success!</h3>
-      <table class="table ">
+      <table class="table table-bordered table-hover table-responsive-sm  ">
         <thead>
           <th></th>
           <th></th>
