--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <form class="form" action="/payment" method="post">
       <div class="form-group">
         <label for="amount">Amount</label>
-        <input class="form-control" type="text" name="amount" id="amount" value="" required>
+        <input class="form-control" type="number" name="amount" id="amount" value="" required min="0">
       </div>
       <div class="form-group">
         <label for="name">Name</label>
