--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transaction Succcess</title>
+    <title>Lifeline</title>
+    <link rel="icon" href="/assets/faviconnn.ico">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Google Fonts -->
